src/test/ui/suggestions/issue-51055-missing-semicolon-between-call-and-tuple.stderr
error[E0618]: expected function, found `bool`
  --> $DIR/issue-51055-missing-semicolon-between-call-and-tuple.rs:14:5
   |
LL |       vindictive() //~ ERROR expected function, found `bool`
   |       ^           - help: try adding a semicolon: `;`
   |  _____|
   | |
LL | |     (1, 2)
   | |__________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
